--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>Content Manager</title>
+    <meta charset="utf-8">
     <script src="https://unpkg.com/netlify-cms-app@^2.0.0/dist/netlify-cms.js"></script>
   </head>
   <body>
